# TypeWiki

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  template.env
deploy/k8s/typewiki-airflow/: Chart.yaml  values.yaml
deploy/k8s/typewiki-airflow/templates/: configmap.yaml
deploy/k8s/typewiki-api/: Chart.yaml  values.yaml
deploy/k8s/typewiki-api/templates/: configmap.yaml  service.yaml
docker/airflow/: Dockerfile
docker/api/: Dockerfile
pdfs/: pdf_manifest.json
src/typewiki/: __main__.py  api.py  app.py  cli.py  config.py  datamodels.py  exceptions.py  utils.py
src/typewiki/airflow/: airflow.cfg
src/typewiki/airflow/dags/: help_center_articles.py
src/typewiki/prompts/: copilot.py
